--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:700');
 
 html, body {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
@@ -18,7 +18,6 @@ body {
 .button_container {
   position: absolute;
   display: flex;
-  bottom: 3rem;
   justify-content: center;
   width: 100%;
 
@@ -27,9 +26,6 @@ body {
     text-decoration: none;
     text-transform:uppercase;
     position:relative;
-    top:0;
-    left:0;
-    padding:20px 40px;
     border-radius:100px;
     display:inline-block;
     transition: all .5s;
