Install Amatic font

--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -51,7 +51,7 @@ body {
   }
 
   .btn::after{
-    content:"";
+    content:'';
     text-decoration: none;
     text-transform:uppercase;
     position:absolute;
